make some Fujitsu systems run (bsc#1141558).

--- a/series.conf
+++ b/series.conf
@@ -54016,6 +54016,7 @@
 	patches.suse/MM-replace-PF_LESS_THROTTLE-with-PF_LOCAL_THROTTLE.patch
 	patches.suse/SUNRPC-defer-slow-parts-of-rpc_free_client-to-a-work.patch
 	patches.kabi/SUNRPC-defer-slow-parts-of-rpc_free_client-to-a-work-kabi.patch
+	patches.suse/0001-make-some-Fujitsu-systems-run.patch
 
 	########################################################
 	# end of sorted patches
