blk-mq: simplify blk_mq_make_request() (bsc#1165478).

--- a/series.conf
+++ b/series.conf
@@ -49637,6 +49637,7 @@
 	patches.suse/0058-bcache-add-reclaimed_journal_buckets-to-struct-cache.patch
 	patches.suse/block-bfq-null-out-the-bic-when-it-s-no-longer-valid.patch
 	patches.suse/block-documentation-Fix-wbt_lat_usec-documentation.patch
+	patches.suse/blk-mq-simplify-blk_mq_make_request.patch
 	patches.suse/libata-don-t-request-sense-data-on-ZAC-ATA-devices.patch
 	patches.suse/documentation-dma-api-fix-a-function-name-of-max_mapping_size
 	patches.suse/docs-move-protection-keys.rst-to-the-core-api-book.patch
