--- a/series.conf
+++ b/series.conf
@@ -19228,6 +19228,7 @@
 	patches.suse/IB-mlx5-Fix-leaking-stack-memory-to-userspace.patch
 	patches.suse/dax-remove-VM_MIXEDMAP-for-fsdax-and-device-dax.patch
 	patches.suse/fs-dcache.c-fix-kmemcheck-splat-at-take_dentry_name_.patch
+	patches.suse/fs-seq_file.c-simplify-seq_file-iteration-code-and-i.patch
 	patches.suse/mm-page_alloc-double-zone-s-batchsize.patch
 	patches.suse/net-9p-fix-error-path-of-p9_virtio_probe.patch
 	patches.suse/net-9p-client.c-version-pointer-uninitialized.patch
