drm: Remove PageReserved manipulation from drm_pci_alloc (bsc#1114279)
	* offset changes

--- a/series.conf
+++ b/series.conf
@@ -27055,6 +27055,7 @@
 	patches.suse/0001-fbmem-Adjust-indentation-in-fb_prepare_logo-and-fb_b.patch
 	patches.suse/drm-drm_dp_mst-remove-set-but-not-used-variable-orig.patch
 	patches.suse/0001-drm-crc-Actually-allow-to-change-the-crc-source.patch
+	patches.suse/0001-drm-Remove-PageReserved-manipulation-from-drm_pci_al.patch
 	patches.suse/s390-gmap-return-proper-error-code-on-ksm-unsharing
 	patches.suse/ALSA-via82xx-Fix-endianness-annotations.patch
 	patches.suse/ALSA-emu10k1-Fix-endianness-annotations.patch
