--- a/series.conf
+++ b/series.conf
@@ -27056,6 +27056,7 @@
 	patches.suse/drm-drm_dp_mst-remove-set-but-not-used-variable-orig.patch
 	patches.suse/0001-drm-crc-Actually-allow-to-change-the-crc-source.patch
 	patches.suse/0001-drm-Remove-PageReserved-manipulation-from-drm_pci_al.patch
+	patches.suse/0001-Revert-drm-panel-simple-Add-support-for-Sharp-LQ150X.patch
 	patches.suse/s390-gmap-return-proper-error-code-on-ksm-unsharing
 	patches.suse/ALSA-via82xx-Fix-endianness-annotations.patch
 	patches.suse/ALSA-emu10k1-Fix-endianness-annotations.patch
