--- a/series.conf
+++ b/series.conf
@@ -27057,6 +27057,7 @@
 	patches.suse/0001-drm-crc-Actually-allow-to-change-the-crc-source.patch
 	patches.suse/0001-drm-Remove-PageReserved-manipulation-from-drm_pci_al.patch
 	patches.suse/0001-Revert-drm-panel-simple-Add-support-for-Sharp-LQ150X.patch
+	patches.suse/0001-drm-i915-properly-sanity-check-batch_start_offset.patch
 	patches.suse/s390-gmap-return-proper-error-code-on-ksm-unsharing
 	patches.suse/ALSA-via82xx-Fix-endianness-annotations.patch
 	patches.suse/ALSA-emu10k1-Fix-endianness-annotations.patch
