--- a/series.conf
+++ b/series.conf
@@ -51309,6 +51309,7 @@
 	patches.suse/0001-btrfs-qgroup-Fix-the-wrong-target-io_tree-when-freei.patch
 	patches.suse/0002-btrfs-qgroup-Fix-reserved-data-space-leak-if-we-have.patch
 	patches.suse/tick-broadcast-hrtimer-fix-a-race-in-bc_set_next.patch
+	patches.suse/blk-mq-honor-io-scheduler-for-multiqueue-devices.patch
 	patches.suse/drm-amdgpu-fix-multiple-memory-leaks-in-acp_hw_init.patch
 	patches.suse/drm-amd-display-memory-leak.patch
 	patches.suse/0002-drm-omap-fix-max-fclk-divider-for-omap36xx.patch
