scsi: qla2xxx: check UNLOADING before posting async work (bsc#1157169).

--- a/series.conf
+++ b/series.conf
@@ -27191,6 +27191,7 @@
 
 	# mkp/scsi fixes
 	patches.suse/scsi-qla2xxx-set-UNLOADING-before-waiting-for-sessio.patch
+	patches.suse/scsi-qla2xxx-check-UNLOADING-before-posting-async-wo.patch
 
 	# out-of-tree patches
 	patches.suse/cifs-handle-netapp-error-codes.patch
