--- a/series.conf
+++ b/series.conf
@@ -27189,6 +27189,9 @@
 	patches.suse/0005-MODSIGN-Allow-the-db-UEFI-variable-to-be-suppressed.patch
 	patches.suse/0006-modsign-Use-secondary-trust-keyring-for-module-signi.patch
 
+	# mkp/scsi fixes
+	patches.suse/scsi-qla2xxx-set-UNLOADING-before-waiting-for-sessio.patch
+
 	# out-of-tree patches
 	patches.suse/cifs-handle-netapp-error-codes.patch
 	patches.suse/powerpc-add-link-stack-flush-mitigation-in-debugfs.patch
