scsi: qla2xxx: Fix regression warnings (bsc#1157169).

--- a/series.conf
+++ b/series.conf
@@ -27178,6 +27178,7 @@
 	patches.suse/ALSA-usb-audio-Don-t-override-ignore_ctl_error-value.patch
 	patches.suse/ALSA-hda-Don-t-release-card-at-firmware-loading-erro.patch
 	patches.suse/ALSA-hda-Keep-the-controller-initialization-even-if-.patch
+	patches.suse/scsi-qla2xxx-Fix-regression-warnings.patch
 	patches.suse/objtool-fix-switch-table-detection-in-text-unlikely.patch
 	patches.suse/objtool-make-bp-scratch-register-warning-more-robust.patch
 
