--- a/series.conf
+++ b/series.conf
@@ -27125,6 +27125,7 @@
 	patches.suse/scsi-qla2xxx-add-ring-buffer-for-tracing-debug-logs.patch
 	patches.suse/scsi-core-avoid-repetitive-logging-of-device-offline.patch
 	patches.suse/scsi-zfcp-fix-missing-erp_lock-in-port-recovery-trigger-for-point-to-point
+	patches.suse/scsi-qla2xxx-Remove-non-functional-code.patch
 	patches.suse/x86-xen-make-the-boot-cpu-idle-task-reliable.patch
 	patches.suse/x86-xen-make-the-secondary-cpu-idle-tasks-reliable.patch
 	patches.suse/PCI-ASPM-Clear-the-correct-bits-when-enabling-L1-sub.patch
