seq_file: fix problem when seeking mid-record (bsc#1170125).

--- a/series.conf
+++ b/series.conf
@@ -24977,6 +24977,7 @@
 	patches.suse/nvmem-use-the-same-permissions-for-eeprom-as-for-nvmem.patch
 	patches.suse/mm-hmm-fix-bad-subpage-pointer-in-try_to_unmap_one.patch
 	patches.suse/mm-memcontrol-c-fix-use-after-free-in-mem_cgroup_iter.patch
+	patches.suse/seq_file-fix-problem-when-seeking-mid-record.patch
 	patches.suse/iommu-dma-handle-sg-length-overflow-better
 	patches.suse/auxdisplay-panel-need-to-delete-scan_timer-when-misc.patch
 	patches.suse/fs-xfs-xfs_log-Don-t-use-KM_MAYFAIL-at-xfs_log_reser.patch
