--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1516,3 +1516,4 @@ dfa9a5efe8b932a84b3b319250aa3ac60c20f876 # ALSA/rawmidi: breaks kABI
 e19ecbf105b236a6334fab64d8fd5437b12ee019 # ASoC: regulator API missing
 e3008bf46ce0baf617cfd1b68d35e433dc603e43 # duplicate of 18380f52dbac230032a16545e67a6d90b548cf18
 4c92057661a3412f547ede95715641d7ee16ddac # lacking all prerequisite documentation
+8e78871bc1e5efec22c950d3fd24ddb63d4ff28a # Duplicate of ecc4d2a52df65479de5e333a9065ed02202a400f: drm/i915/userptr: fix size calculation
