--- a/series.conf
+++ b/series.conf
@@ -19456,6 +19456,7 @@
 	patches.suse/IB-IPoIB-Set-ah-valid-flag-in-multicast-send-flow.patch
 	patches.suse/rdma-cxgb4-fix-some-info-leaks.patch
 	patches.suse/IB-ipoib-Get-rid-of-IPOIB_FLAG_GOING_DOWN.patch
+	patches.suse/IB-ipoib-Use-cancel_delayed_work_sync-for-neigh-clea.patch
 	patches.suse/IB-mlx5-Fix-leaking-stack-memory-to-userspace.patch
 	patches.suse/dax-remove-VM_MIXEDMAP-for-fsdax-and-device-dax.patch
 	patches.suse/fs-dcache.c-fix-kmemcheck-splat-at-take_dentry_name_.patch
