RDMA/netdev: Fix netlink support in IPoIB (bsc#1168503).

--- a/series.conf
+++ b/series.conf
@@ -20529,6 +20529,7 @@
 	patches.suse/libertas-don-t-set-URB_ZERO_PACKET-on-IN-USB-transfe.patch
 	patches.suse/tun-Consistently-configure-generic-netdev-params-via.patch
 	patches.suse/RDMA-netdev-Hoist-alloc_netdev_mqs-out-of-the-driver.patch
+	patches.suse/RDMA-netdev-Fix-netlink-support-in-IPoIB.patch
 	patches.suse/bpf-wait-for-running-BPF-programs-when-updating-map-.patch
 	patches.suse/net-hns3-remove-hns3_fill_desc_tso.patch
 	patches.suse/net-hns3-move-DMA-map-into-hns3_fill_desc.patch
