--- a/series.conf
+++ b/series.conf
@@ -19459,6 +19459,7 @@
 	patches.suse/IB-ipoib-Use-cancel_delayed_work_sync-for-neigh-clea.patch
 	patches.suse/IB-ipoib-Move-all-uninit-code-into-ndo_uninit.patch
 	patches.suse/IB-ipoib-Move-init-code-to-ndo_init.patch
+	patches.suse/RDMA-netdev-Use-priv_destructor-for-netdev-cleanup.patch
 	patches.suse/IB-mlx5-Fix-leaking-stack-memory-to-userspace.patch
 	patches.suse/dax-remove-VM_MIXEDMAP-for-fsdax-and-device-dax.patch
 	patches.suse/fs-dcache.c-fix-kmemcheck-splat-at-take_dentry_name_.patch
