--- a/series.conf
+++ b/series.conf
@@ -12418,6 +12418,7 @@
 	patches.suse/IB-ipoib-Replace-printk-with-pr_warn.patch
 	patches.suse/IB-mlx5-revisit-Wmaybe-uninitialized-warning.patch
 	patches.suse/RDMA-bnxt_re-Remove-redundant-bnxt_qplib_disable_nq-.patch
+	patches.suse/IB-ipoib-Warn-when-one-port-fails-to-initialize.patch
 	patches.suse/RDMA-iwpm-Fix-uninitialized-error-code-in-iwpm_send_.patch
 	patches.suse/iw_cxgb4-make-pointer-reg_workq-static.patch
 	patches.suse/IB-ipoib-Avoid-memory-leak-if-the-SA-returns-a-diffe.patch
