RDMA/ipoib: Fix use of sizeof() (bsc#1168503).

--- a/series.conf
+++ b/series.conf
@@ -19443,6 +19443,7 @@
 	patches.suse/IB-core-type-promotion-bug-in-rdma_rw_init_one_mr.patch
 	patches.suse/RDMA-bnxt_re-Fix-a-couple-off-by-one-bugs.patch
 	patches.suse/RDMA-bnxt_re-Fix-a-bunch-of-off-by-one-bugs-in-qplib.patch
+	patches.suse/RDMA-ipoib-Fix-use-of-sizeof.patch
 	patches.suse/RDMA-cxgb4-Make-c4iw_poll_cq_one-easier-to-analyze.patch
 	patches.suse/IB-mlx5-fix-uaccess-beyond-count-in-debugfs-read-wri.patch
 	patches.suse/rdma-cxgb4-Add-support-for-64Byte-cqes.patch
