IB/ipoib: Get rid of the sysfs_mutex (bsc#1168503).

--- a/series.conf
+++ b/series.conf
@@ -19460,6 +19460,7 @@
 	patches.suse/IB-ipoib-Move-all-uninit-code-into-ndo_uninit.patch
 	patches.suse/IB-ipoib-Move-init-code-to-ndo_init.patch
 	patches.suse/RDMA-netdev-Use-priv_destructor-for-netdev-cleanup.patch
+	patches.suse/IB-ipoib-Get-rid-of-the-sysfs_mutex.patch
 	patches.suse/IB-mlx5-Fix-leaking-stack-memory-to-userspace.patch
 	patches.suse/dax-remove-VM_MIXEDMAP-for-fsdax-and-device-dax.patch
 	patches.suse/fs-dcache.c-fix-kmemcheck-splat-at-take_dentry_name_.patch
