--- a/series.conf
+++ b/series.conf
@@ -19462,6 +19462,7 @@
 	patches.suse/RDMA-netdev-Use-priv_destructor-for-netdev-cleanup.patch
 	patches.suse/IB-ipoib-Get-rid-of-the-sysfs_mutex.patch
 	patches.suse/IB-ipoib-Do-not-remove-child-devices-from-within-the.patch
+	patches.suse/IB-ipoib-Maintain-the-child_intfs-list-from-ndo_init.patch
 	patches.suse/IB-mlx5-Fix-leaking-stack-memory-to-userspace.patch
 	patches.suse/dax-remove-VM_MIXEDMAP-for-fsdax-and-device-dax.patch
 	patches.suse/fs-dcache.c-fix-kmemcheck-splat-at-take_dentry_name_.patch
