- IB/ipoib: Replace printk with pr_warn (bsc#1168503). - Refresh   patches.suse/IB-ipoib-Fix-for-potential-no-carrier-state.patch.

--- a/series.conf
+++ b/series.conf
@@ -12415,6 +12415,7 @@
 	patches.suse/IB-CM-Change-sgid-to-IB-GID-when-handling-CM-request.patch
 	patches.suse/IB-hfi1-Use-4096-for-default-active-MTU-in-query_qp.patch
 	patches.suse/IB-qib-Fix-comparison-error-with-qperf-compare-swap-.patch
+	patches.suse/IB-ipoib-Replace-printk-with-pr_warn.patch
 	patches.suse/IB-mlx5-revisit-Wmaybe-uninitialized-warning.patch
 	patches.suse/RDMA-bnxt_re-Remove-redundant-bnxt_qplib_disable_nq-.patch
 	patches.suse/RDMA-iwpm-Fix-uninitialized-error-code-in-iwpm_send_.patch
