kabi, protect struct ib_device (bsc#1168503).

--- a/series.conf
+++ b/series.conf
@@ -28462,6 +28462,7 @@
 	patches.kabi/v4l2_fh-kabi-workaround.patch
 
 	patches.kabi/scsi-core-kabi-fix-offline_already.patch
+	patches.kabi/ib_device-hide-rdma_netdev_get_params.patch
 
 	########################################################
 	# You'd better have a good reason for adding a patch
