--- a/series.conf
+++ b/series.conf
@@ -25071,6 +25071,7 @@
 	patches.suse/0019-mfd-arizona-Fix-undefined-behavior.patch
 	patches.suse/mfd-intel-lpss-Release-IDA-resources.patch
 	patches.suse/0020-mfd-hi655x-pmic-Fix-missing-return-value-check-for-d.patch
+	patches.suse/IB-ipoib-Add-child-to-parent-list-only-if-device-ini.patch
 	patches.suse/IB-mlx5-Report-correctly-tag-matching-rendezvous-cap.patch
 	patches.suse/PCI-Return-error-if-cannot-probe-VF.patch
 	patches.suse/PCI-Always-allow-probing-with-driver_override.patch
