--- a/series.conf
+++ b/series.conf
@@ -53328,6 +53328,7 @@
 	patches.suse/ALSA-usb-audio-Add-static-mapping-table-for-ALC1220-.patch
 	patches.suse/ALSA-usb-audio-Add-quirk-for-Focusrite-Scarlett-2i2.patch
 	patches.suse/ALSA-usb-audio-Apply-async-workaround-for-Scarlett-2.patch
+	patches.suse/ALSA-usb-audio-Add-connector-notifier-delegation.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-lpfc-Fix-kasan-slab-out-of-bounds-error-in-lpfc.patch
