ALSA: usb-audio: Apply async workaround for Scarlett 2i4 2nd gen (bsc#1051510).

--- a/series.conf
+++ b/series.conf
@@ -53327,6 +53327,7 @@
 	patches.suse/objtool-make-bp-scratch-register-warning-more-robust.patch
 	patches.suse/ALSA-usb-audio-Add-static-mapping-table-for-ALC1220-.patch
 	patches.suse/ALSA-usb-audio-Add-quirk-for-Focusrite-Scarlett-2i2.patch
+	patches.suse/ALSA-usb-audio-Apply-async-workaround-for-Scarlett-2.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-lpfc-Fix-kasan-slab-out-of-bounds-error-in-lpfc.patch
