--- a/series.conf
+++ b/series.conf
@@ -53326,6 +53326,7 @@
 	patches.suse/objtool-fix-switch-table-detection-in-text-unlikely.patch
 	patches.suse/objtool-make-bp-scratch-register-warning-more-robust.patch
 	patches.suse/ALSA-usb-audio-Add-static-mapping-table-for-ALC1220-.patch
+	patches.suse/ALSA-usb-audio-Add-quirk-for-Focusrite-Scarlett-2i2.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-lpfc-Fix-kasan-slab-out-of-bounds-error-in-lpfc.patch
