--- a/series.conf
+++ b/series.conf
@@ -53325,6 +53325,7 @@
 	patches.suse/ALSA-hda-call-runtime_allow-for-all-hda-controllers.patch
 	patches.suse/objtool-fix-switch-table-detection-in-text-unlikely.patch
 	patches.suse/objtool-make-bp-scratch-register-warning-more-robust.patch
+	patches.suse/ALSA-usb-audio-Add-static-mapping-table-for-ALC1220-.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-lpfc-Fix-kasan-slab-out-of-bounds-error-in-lpfc.patch
