--- a/series.conf
+++ b/series.conf
@@ -53329,6 +53329,7 @@
 	patches.suse/ALSA-usb-audio-Add-quirk-for-Focusrite-Scarlett-2i2.patch
 	patches.suse/ALSA-usb-audio-Apply-async-workaround-for-Scarlett-2.patch
 	patches.suse/ALSA-usb-audio-Add-connector-notifier-delegation.patch
+	patches.suse/ALSA-hda-Always-use-jackpoll-helper-for-jack-update-.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-lpfc-Fix-kasan-slab-out-of-bounds-error-in-lpfc.patch
