--- a/series.conf
+++ b/series.conf
@@ -53327,6 +53327,7 @@
 	patches.suse/ALSA-hda-call-runtime_allow-for-all-hda-controllers.patch
 	patches.suse/objtool-fix-switch-table-detection-in-text-unlikely.patch
 	patches.suse/objtool-make-bp-scratch-register-warning-more-robust.patch
+	patches.suse/ALSA-hda-Remove-ASUS-ROG-Zenith-from-the-blacklist.patch
 	patches.suse/ALSA-usb-audio-Add-static-mapping-table-for-ALC1220-.patch
 	patches.suse/ALSA-usb-audio-Add-quirk-for-Focusrite-Scarlett-2i2.patch
 	patches.suse/ALSA-usb-audio-Apply-async-workaround-for-Scarlett-2.patch
