ALSA: hda: Add driver blacklist (bsc#1051510).

--- a/series.conf
+++ b/series.conf
@@ -53300,6 +53300,7 @@
 	patches.suse/ALSA-hda-Fix-potential-access-overflow-in-beep-helpe.patch
 	patches.suse/ALSA-ice1724-Fix-invalid-access-for-enumerated-ctl-i.patch
 	patches.suse/ALSA-usb-audio-Add-mixer-workaround-for-TRX40-and-co.patch
+	patches.suse/ALSA-hda-Add-driver-blacklist.patch
 	patches.suse/ASoC-Intel-atom-Take-the-drv-lock-mutex-before-calli.patch
 	patches.suse/ipmi-fix-hung-processes-in-__get_guid.patch
 	patches.suse/pwm-bcm2835-Dynamically-allocate-base.patch
