net/ethernet: add Google GVE driver (jsc#SLE-10538)

--- a/series.conf
+++ b/series.conf
@@ -49794,6 +49794,7 @@
 	patches.suse/net-hns3-optimize-the-CSQ-cmd-error-handling.patch
 	patches.suse/e1000e-Increase-pause-and-refresh-time.patch
 	patches.suse/ixgbe-Avoid-NULL-pointer-dereference-with-VF-on-non-.patch
+	patches.suse/0001-Add-gVNIC-driver.patch
 	patches.suse/net-hns3-enable-broadcast-promisc-mode-when-initiali.patch
 	patches.suse/net-hns3-fix-flow-control-configure-issue-for-fibre-.patch
 	patches.suse/net-hns3-add-all-IMP-return-code.patch
