--- a/supported.conf
+++ b/supported.conf
@@ -1508,6 +1508,7 @@
 -		drivers/net/ethernet/freescale/gianfar_driver
 -		drivers/net/ethernet/freescale/gianfar_ptp
 		drivers/net/ethernet/freescale/xgmac_mdio
+		drivers/net/ethernet/google/gve/gve
 -		drivers/net/ethernet/hisilicon/hip04_eth
 -		drivers/net/ethernet/hisilicon/hisi_femac
 -		drivers/net/ethernet/hisilicon/hix5hd2_gmac
