Refresh patches.suse/ibmvfc-don-t-send-implicit-logouts-prior-to-NPIV-log.patch

--- a/series.conf
+++ b/series.conf
@@ -27199,6 +27199,9 @@
 	patches.suse/0005-MODSIGN-Allow-the-db-UEFI-variable-to-be-suppressed.patch
 	patches.suse/0006-modsign-Use-secondary-trust-keyring-for-module-signi.patch
 
+	# mkp/scsi fixes
+	patches.suse/scsi-ibmvfc-Don-t-send-implicit-logouts-prior-to-NPI.patch
+
 	# out-of-tree patches
 	patches.suse/cifs-handle-netapp-error-codes.patch
 	patches.suse/powerpc-add-link-stack-flush-mitigation-in-debugfs.patch
@@ -27223,7 +27226,6 @@
 	patches.suse/MM-replace-PF_LESS_THROTTLE-with-PF_LOCAL_THROTTLE.patch
 	patches.suse/SUNRPC-defer-slow-parts-of-rpc_free_client-to-a-work.patch
 	patches.kabi/SUNRPC-defer-slow-parts-of-rpc_free_client-to-a-work-kabi.patch
-	patches.suse/ibmvfc-don-t-send-implicit-logouts-prior-to-NPIV-log.patch
 
 	########################################################
 	# end of sorted patches
