--- a/series.conf
+++ b/series.conf
@@ -25243,6 +25243,7 @@
 	patches.suse/KVM-PPC-Book3S-HV-Don-t-lose-pending-doorbell-reques.patch
 	patches.suse/kvm-s390-test-for-bad-access-register-and-size-at-the-start-of-s390_mem_op
 	patches.suse/usb-host-xhci-hub-fix-extra-endianness-conversion.patch
+	patches.suse/usb-dwc3-don-t-set-gadget-is_otg-flag.patch
 	patches.suse/0001-usbip-Implement-SG-support-to-vhci-hcd-and-stub-driv.patch
 	patches.suse/USB-usbcore-Fix-slab-out-of-bounds-bug-during-device.patch
 	patches.suse/iio-dac-ad5380-fix-incorrect-assignment-to-val.patch
