--- a/series.conf
+++ b/series.conf
@@ -27197,6 +27197,7 @@
 	patches.suse/ALSA-usx2y-Fix-potential-NULL-dereference.patch
 	patches.suse/ALSA-usb-audio-Fix-usb-audio-refcnt-leak-when-gettin.patch
 	patches.suse/ALSA-hda-realtek-Add-new-codec-supported-for-ALC245.patch
+	patches.suse/USB-early-Handle-AMD-s-spec-compliant-identifiers-to.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-set-UNLOADING-before-waiting-for-sessio.patch
