kABI fix for early XHCI debug (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -28074,6 +28074,7 @@
 	patches.kabi/scsi-core-kabi-fix-offline_already.patch
 
 	patches.kabi/ptp_clock-kABI-workaround.patch
+	patches.kabi/kABI-fix-for-early-XHCI-debug.patch
 
 	########################################################
 	# You'd better have a good reason for adding a patch
