usb: f_fs: Clear OS Extended descriptor counts to zero in ffs_data_reset() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -27198,6 +27198,7 @@
 	patches.suse/ALSA-usb-audio-Fix-usb-audio-refcnt-leak-when-gettin.patch
 	patches.suse/ALSA-hda-realtek-Add-new-codec-supported-for-ALC245.patch
 	patches.suse/USB-early-Handle-AMD-s-spec-compliant-identifiers-to.patch
+	patches.suse/usb-f_fs-Clear-OS-Extended-descriptor-counts-to-zero.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-set-UNLOADING-before-waiting-for-sessio.patch
