--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1519,3 +1519,4 @@ e3008bf46ce0baf617cfd1b68d35e433dc603e43 # duplicate of 18380f52dbac230032a16545
 c6790dc22312f592c1434577258b31c48c72d52a # Duplicate of aa3146193ae25d0fe4b96d815169a135db2e8f01: drm/i915: Wean off drm_pci_alloc/drm_pci_free
 efbf928824820f2738f41271934f6ec2c6ebd587 # Duplicate of f4aaa44e8b20f7e0d4ea68d3bca4968b6ae5aaff: drm/i915/selftests: Fix return in assert_mmap_offset()
 16105850f7fcf91be28bc9958b9a502406a40926 # Duplicate of 045706bff837ee89c13f1ace173db71922c1c40b: xhci: Do not open code __print_symbolic() in xhci trace events
+586f4335700fac3a5b2dd337b5b96e09c012184b # kABI
