usb: dwc3: gadget: Do link recovery for SS and SSP (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -27199,6 +27199,7 @@
 	patches.suse/ALSA-hda-realtek-Add-new-codec-supported-for-ALC245.patch
 	patches.suse/USB-early-Handle-AMD-s-spec-compliant-identifiers-to.patch
 	patches.suse/usb-f_fs-Clear-OS-Extended-descriptor-counts-to-zero.patch
+	patches.suse/usb-dwc3-gadget-Do-link-recovery-for-SS-and-SSP.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-set-UNLOADING-before-waiting-for-sessio.patch
