USB: hub: Fix handling of connect changes during sleep (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -27203,6 +27203,7 @@
 	patches.suse/usb-f_fs-Clear-OS-Extended-descriptor-counts-to-zero.patch
 	patches.suse/usb-gadget-udc-bdc-Remove-unnecessary-NULL-checks-in.patch
 	patches.suse/usb-dwc3-gadget-Do-link-recovery-for-SS-and-SSP.patch
+	patches.suse/USB-hub-Fix-handling-of-connect-changes-during-sleep.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-set-UNLOADING-before-waiting-for-sessio.patch
