tools lib traceevent: Remove unneeded qsort and uses memmove instead (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -25155,6 +25155,7 @@
 	patches.suse/objtool-clobber-user-cflags-variable.patch
 	patches.suse/efi-cper-print-AER-info-of-PCIe-fatal-error.patch
 	patches.suse/0001-tools-lib-traceevent-Do-not-free-tep-cmdlines-in-add.patch
+	patches.suse/tools-lib-traceevent-Remove-unneeded-qsort-and-uses-.patch
 	patches.suse/platform-x86-pmc_atom-Add-Siemens-SIMATIC-IPC227E-to.patch
 	patches.suse/alarmtimer-Use-EOPNOTSUPP-instead-of-ENOTSUPP.patch
 	patches.suse/x86-kgbd-use-nmi_vector-not-apic_dm_nmi.patch
