scsi: ibmvscsi: Fix WARN_ON during event pool release (bsc#1170791 ltc#185128).

--- a/series.conf
+++ b/series.conf
@@ -27213,6 +27213,7 @@
 
 	# mkp/scsi fixes
 	patches.suse/scsi-ibmvfc-Don-t-send-implicit-logouts-prior-to-NPI.patch
+	patches.suse/scsi-ibmvscsi-Fix-WARN_ON-during-event-pool-release.patch
 
 	# out-of-tree patches
 	patches.suse/cifs-handle-netapp-error-codes.patch
