--- a/series.conf
+++ b/series.conf
@@ -27024,6 +27024,7 @@
 	patches.suse/bpf-Explicitly-memset-some-bpf-info-structures-decla.patch
 	patches.suse/tpm-ibmvtpm-Wait-for-buffer-to-be-set-before-proceed.patch
 	patches.suse/KEYS-reaching-the-keys-quotas-correctly.patch
+	patches.suse/libata-Remove-extra-scsi_host_put-in-ata_scsi_add_ho.patch
 	patches.suse/block-bfq-fix-use-after-free-in-bfq_idle_slice_timer.patch
 	patches.suse/block-keep-bdi-io_pages-in-sync-with-max_sectors_kb-.patch
 	patches.suse/media-usbtv-fix-control-message-timeouts.patch
