--- a/series.conf
+++ b/series.conf
@@ -27221,6 +27221,7 @@
 	patches.suse/ALSA-usb-audio-Fix-usb-audio-refcnt-leak-when-gettin.patch
 	patches.suse/ALSA-hda-realtek-Add-new-codec-supported-for-ALC245.patch
 	patches.suse/macvlan-fix-null-dereference-in-macvlan_device_event.patch
+	patches.suse/iwlwifi-pcie-actually-release-queue-memory-in-TVQM.patch
 	patches.suse/USB-early-Handle-AMD-s-spec-compliant-identifiers-to.patch
 	patches.suse/usb-f_fs-Clear-OS-Extended-descriptor-counts-to-zero.patch
 	patches.suse/usb-gadget-udc-bdc-Remove-unnecessary-NULL-checks-in.patch
