--- a/series.conf
+++ b/series.conf
@@ -26034,6 +26034,7 @@
 	patches.suse/x86-speculation-fix-redundant-mds-mitigation-message.patch
 	patches.suse/cpuidle-Do-not-unset-the-driver-if-it-is-there-alrea.patch
 	patches.suse/cpufreq-powernv-fix-stack-bloat-and-hard-limit-on-nu.patch
+	patches.suse/cpufreq-s3c64xx-Remove-pointless-NULL-check-in-s3c64.patch
 	patches.suse/cpufreq-Register-drivers-only-after-CPU-devices-have.patch
 	patches.suse/PM-devfreq-Check-NULL-governor-in-available_governor.patch
 	patches.suse/PM-devfreq-Lock-devfreq-in-trans_stat_show.patch
