clk: imx6ull: use OSC clock during AXI rate change (bsc#1051510).

--- a/series.conf
+++ b/series.conf
@@ -16543,6 +16543,7 @@
 	patches.suse/i2c-pmcmsp-return-message-count-on-master_xfer-succe
 	patches.suse/i2c-pmcmsp-fix-error-return-from-master_xfer
 	patches.suse/i2c-viperboard-return-message-count-on-master_xfer-s
+	patches.suse/clk-imx6ull-use-OSC-clock-during-AXI-rate-change.patch
 	patches.suse/lib-test_bitmap.c-fix-bitmap-optimisation-tests-to-r.patch
 	patches.suse/radix-tree-test-suite-fix-mapshift-build-target.patch
 	patches.suse/radix-tree-test-suite-fix-compilation-issue.patch
