--- a/series.conf
+++ b/series.conf
@@ -27074,6 +27074,7 @@
 	patches.suse/pxa168fb-fix-release-function-mismatch-in-probe-fail.patch
 	patches.suse/0001-fbmem-Adjust-indentation-in-fb_prepare_logo-and-fb_b.patch
 	patches.suse/drm-drm_dp_mst-remove-set-but-not-used-variable-orig.patch
+	patches.suse/drm-dp_mst-Fix-clearing-payload-state-on-topology-di.patch
 	patches.suse/0001-drm-crc-Actually-allow-to-change-the-crc-source.patch
 	patches.suse/0001-drm-Remove-PageReserved-manipulation-from-drm_pci_al.patch
 	patches.suse/0001-Revert-drm-panel-simple-Add-support-for-Sharp-LQ150X.patch
