--- a/series.conf
+++ b/series.conf
@@ -26477,6 +26477,7 @@
 	patches.suse/ALSA-usb-audio-fix-sync-ep-altsetting-sanity-check.patch
 	patches.suse/ALSA-seq-Fix-racy-access-for-queue-timer-in-proc-rea.patch
 	patches.suse/ASoC-msm8916-wcd-analog-Fix-selected-events-for-MIC-.patch
+	patches.suse/ASoC-msm8916-wcd-digital-Reset-RX-interpolation-path.patch
 	patches.suse/0001-btrfs-relocation-fix-reloc_root-lifespan-and-access.patch
 	patches.suse/usb-core-hub-Improved-device-recognition-on-remote-w.patch
 	patches.suse/USB-serial-simple-Add-Motorola-Solutions-TETRA-MTP3x.patch
