--- a/series.conf
+++ b/series.conf
@@ -27225,6 +27225,7 @@
 	patches.suse/macsec-avoid-to-set-wrong-mtu.patch
 	patches.suse/iio-ad7797-Use-correct-attribute_group.patch
 	patches.suse/iio-xilinx-xadc-Fix-ADC-B-powerdown.patch
+	patches.suse/iio-xilinx-xadc-Fix-clearing-interrupt-when-enabling.patch
 	patches.suse/USB-early-Handle-AMD-s-spec-compliant-identifiers-to.patch
 	patches.suse/usb-f_fs-Clear-OS-Extended-descriptor-counts-to-zero.patch
 	patches.suse/usb-gadget-udc-bdc-Remove-unnecessary-NULL-checks-in.patch
