clk: mediatek: correct the clocks for MT2701 HDMI PHY module (bsc#1051510).

--- a/series.conf
+++ b/series.conf
@@ -17583,6 +17583,7 @@
 	patches.suse/0005-soc-rockchip-power-domain-Use-of_clk_get_parent_coun.patch
 	patches.suse/clk-qcom-Base-rcg-parent-rate-off-plan-frequency
 	patches.suse/0003-clk-bulk-silently-error-out-on-EPROBE_DEFER.patch
+	patches.suse/clk-mediatek-correct-the-clocks-for-MT2701-HDMI-PHY-.patch
 	patches.suse/clk-imx7d-fix-mipi-dphy-div-parent
 	patches.suse/clk-mvebu-use-correct-bit-for-98DX3236-NAND
 	patches.suse/clk-at91-PLL-recalc_rate-now-using-cached-MUL-and-DI
