clk: sunxi-ng: a64: Fix gate bit of DSI DPHY (bsc#1051510).

--- a/series.conf
+++ b/series.conf
@@ -21482,6 +21482,7 @@
 	patches.suse/0001-dt-bindings-clock-r8a7795-Remove-CSIREF-clock.patch
 	patches.suse/0001-dt-bindings-clock-r8a7796-Remove-CSIREF-clock.patch
 	patches.suse/clk-sunxi-ng-enable-so-said-LDOs-for-A64-SoC-s-pll-m.patch
+	patches.suse/clk-sunxi-ng-a64-Fix-gate-bit-of-DSI-DPHY.patch
 	patches.suse/clk-sunxi-ng-h3-h5-Fix-CSI_MCLK-parent.patch
 	patches.suse/clk-sunxi-ng-a33-Set-CLK_SET_RATE_PARENT-for-all-aud.patch
 	patches.suse/clk-rockchip-fix-typo-in-rk3188-spdif_frac-parent.patch
