clk: Add clk_hw_unregister_composite helper function definition (bsc#1051510).

--- a/series.conf
+++ b/series.conf
@@ -26212,6 +26212,7 @@
 	patches.suse/compat_ioctl-handle-SIOCOUTQNSD.patch
 	patches.suse/clk-samsung-exynos5420-Preserve-CPU-clocks-configura.patch
 	patches.suse/clk-pxa-fix-one-of-the-pxa-RTC-clocks.patch
+	patches.suse/clk-Add-clk_hw_unregister_composite-helper-function-.patch
 	patches.suse/mfd-intel-lpss-Add-default-I2C-device-properties-for.patch
 	patches.suse/gpio-mpc8xxx-Don-t-overwrite-default-irq_set_type-ca.patch
 	patches.suse/platform-x86-hp-wmi-Fix-ACPI-errors-caused-by-too-sm.patch
