--- a/series.conf
+++ b/series.conf
@@ -27206,6 +27206,7 @@
 	patches.suse/x86-xen-fix-booting-32-bit-pv-guest.patch
 	patches.suse/cifs-ignore-cached-share-root-handle-closing-errors.patch
 	patches.suse/tracing-fix-the-race-between-registering-snapshot-event-trigger-and-triggering-snapshot-operation.patch
+	patches.suse/mac80211_hwsim-Use-kstrndup-in-place-of-kasprintf.patch
 	patches.suse/ALSA-ctxfi-Remove-unnecessary-cast-in-kfree.patch
 	patches.suse/ALSA-usb-audio-Don-t-override-ignore_ctl_error-value.patch
 	patches.suse/ALSA-hda-Don-t-release-card-at-firmware-loading-erro.patch
