--- a/series.conf
+++ b/series.conf
@@ -27223,6 +27223,7 @@
 	patches.suse/macvlan-fix-null-dereference-in-macvlan_device_event.patch
 	patches.suse/iwlwifi-pcie-actually-release-queue-memory-in-TVQM.patch
 	patches.suse/macsec-avoid-to-set-wrong-mtu.patch
+	patches.suse/iio-ad7797-Use-correct-attribute_group.patch
 	patches.suse/USB-early-Handle-AMD-s-spec-compliant-identifiers-to.patch
 	patches.suse/usb-f_fs-Clear-OS-Extended-descriptor-counts-to-zero.patch
 	patches.suse/usb-gadget-udc-bdc-Remove-unnecessary-NULL-checks-in.patch
