--- a/series.conf
+++ b/series.conf
@@ -27019,6 +27019,7 @@
 	patches.suse/Input-avoid-BIT-macro-usage-in-the-serio.h-UAPI-head.patch
 	patches.suse/scsi-qla2xxx-Fix-I-Os-being-passed-down-when-FC-devi.patch
 	patches.suse/i2c-hix5hd2-add-missed-clk_disable_unprepare-in-remo.patch
+	patches.suse/i2c-st-fix-missing-struct-parameter-description.patch
 	patches.suse/bpf-Explicitly-memset-the-bpf_attr-structure.patch
 	patches.suse/bpf-Explicitly-memset-some-bpf-info-structures-decla.patch
 	patches.suse/tpm-ibmvtpm-Wait-for-buffer-to-be-set-before-proceed.patch
