firmware: qcom: scm: fix compilation error when disabled (bsc#1051510).

--- a/series.conf
+++ b/series.conf
@@ -21914,6 +21914,7 @@
 	patches.suse/scripts-gdb-fix-lx-version-string-output.patch
 	patches.suse/drivers-base-platform.c-kmemleak-ignore-a-known-leak.patch
 	patches.suse/ARM-8808-1-kexec-offline-panic_smp_self_stop-CPU.patch
+	patches.suse/firmware-qcom-scm-fix-compilation-error-when-disable.patch
 	patches.suse/ceph-don-t-update-importing-cap-s-mseq-when-handing-cap-export.patch
 	patches.suse/xfs-xfs_buf-drop-useless-LIST_HEAD.patch
 	patches.suse/smb3-fix-large-reads-on-encrypted-connections.patch
