--- a/series.conf
+++ b/series.conf
@@ -21490,6 +21490,7 @@
 	patches.suse/clk-rockchip-fix-rk3188-sclk_mac_lbtest-parameter-or.patch
 	patches.suse/clk-rockchip-fix-I2S1-clock-gate-register-for-rk3328.patch
 	patches.suse/clk-rockchip-fix-ID-of-8ch-clock-of-I2S1-for-rk3328.patch
+	patches.suse/clk-imx-make-mux-parent-strings-const.patch
 	patches.suse/clk-imx6q-reset-exclusive-gates-on-init.patch
 	patches.suse/clk-imx6sl-ensure-MMDC-CH0-handshake-is-bypassed.patch
 	patches.suse/device-property-fix-fwnode_graph_get_next_endpoint-d.patch
