--- a/series.conf
+++ b/series.conf
@@ -27192,6 +27192,7 @@
 	patches.suse/ALSA-hda-Fix-potential-access-overflow-in-beep-helpe.patch
 	patches.suse/ALSA-ice1724-Fix-invalid-access-for-enumerated-ctl-i.patch
 	patches.suse/ASoC-fix-regwmask.patch
+	patches.suse/ASoC-dapm-connect-virtual-mux-with-default-value.patch
 	patches.suse/ASoC-dpcm-allow-start-or-stop-during-pause-for-backe.patch
 	patches.suse/ASoC-topology-use-name_prefix-for-new-kcontrol.patch
 	patches.suse/ASoC-Intel-atom-Take-the-drv-lock-mutex-before-calli.patch
