--- a/series.conf
+++ b/series.conf
@@ -27227,6 +27227,7 @@
 	patches.suse/iio-xilinx-xadc-Fix-ADC-B-powerdown.patch
 	patches.suse/iio-xilinx-xadc-Fix-clearing-interrupt-when-enabling.patch
 	patches.suse/iio-xilinx-xadc-Fix-sequencer-configuration-for-aux-.patch
+	patches.suse/staging-comedi-Fix-comedi_device-refcnt-leak-in-come.patch
 	patches.suse/USB-early-Handle-AMD-s-spec-compliant-identifiers-to.patch
 	patches.suse/usb-f_fs-Clear-OS-Extended-descriptor-counts-to-zero.patch
 	patches.suse/usb-gadget-udc-bdc-Remove-unnecessary-NULL-checks-in.patch
