--- a/series.conf
+++ b/series.conf
@@ -27181,6 +27181,7 @@
 	patches.suse/0001-mm-memory_hotplug.c-only-respect-mem-parameter-durin.patch
 	patches.suse/mfd-dln2-Fix-sanity-checking-for-endpoints.patch
 	patches.suse/thermal-devfreq_cooling-inline-all-stubs-for-CONFIG_.patch
+	patches.suse/Input-i8042-add-Acer-Aspire-5738z-to-nomux-list.patch
 	patches.suse/kvm-s390-vsie-fix-region-1-asce-sanity-shadow-address-checks
 	patches.suse/kvm-s390-vsie-fix-possible-race-when-shadowing-region-3-tables
 	patches.suse/iommu-amd-fix-the-configuration-of-gcr3-table-root-pointer
