- Input: raydium_i2c_ts - use true and false for boolean values   (bsc#1051510). - Refresh   patches.suse/Input-raydium_i2c_ts-fix-error-codes-in-raydium_i2c_.patch.

--- a/series.conf
+++ b/series.conf
@@ -19310,6 +19310,7 @@
 	patches.suse/dmaengine-mv_xor_v2-kill-the-tasklets-upon-exit
 	patches.suse/dmaengine-pl330-fix-irq-race-with-terminate_all.patch
 	patches.suse/Input-atmel_mxt_ts-only-use-first-T9-instance.patch
+	patches.suse/Input-raydium_i2c_ts-use-true-and-false-for-boolean-.patch
 	patches.suse/KVM-PPC-Book3S-Fix-matching-of-hardware-and-emulated.patch
 	patches.suse/KVM-PPC-Book3S-HV-Add-of_node_put-in-success-path.patch
 	patches.suse/KVM-PPC-Book3S-HV-Fix-constant-size-warning.patch
