ip6_tunnel: Allow rcv/xmit even if remote address is a local address (bsc#1166978).

--- a/series.conf
+++ b/series.conf
@@ -13966,6 +13966,7 @@
 	patches.suse/mlxsw-spectrum-mr-Fix-various-endianness-issues.patch
 	patches.suse/mlxsw-spectrum-mr-Make-the-function-mlxsw_sp_mr_dev_.patch
 	patches.suse/mlxsw-spectrum-mr_tcam-Include-the-mr_tcam-header-fi.patch
+	patches.suse/bsc1166978-ip6_tunnel-Allow-rcv-xmit-even-if-remote-address-is-a-local-address.patch
 	patches.suse/bpf-use-the-same-condition-in-perf-event-set-free-bp.patch
 	patches.suse/bpf-permit-multiple-bpf-attachments-for-a-single-per.patch
 	patches.suse/bpf-add-a-test-case-to-test-single-tp-multiple-bpf-a.patch
