--- a/series.conf
+++ b/series.conf
@@ -21526,6 +21526,7 @@
 	patches.suse/powerpc-perf-Fix-unit_sel-cache_sel-checks.patch
 	patches.suse/powerpc-perf-Add-constraints-for-power9-l2-l3-bus-ev.patch
 	patches.suse/powerpc-perf-Remove-l2-bus-events-from-HW-cache-even.patch
+	patches.suse/0001-raid6-ppc-Fix-build-for-clang.patch
 	patches.suse/powerpc-fsl-Fix-spectre_v2-mitigations-reporting.patch
 	patches.suse/powerpc-fsl-Add-nospectre_v2-command-line-argument.patch
 	patches.suse/powerpc-fsl-Update-Spectre-v2-reporting.patch
