--- a/series.conf
+++ b/series.conf
@@ -25833,6 +25833,7 @@
 	patches.suse/USB-gadget-Reject-endpoints-with-0-maxpacket-value.patch
 	patches.suse/USB-serial-whiteheat-fix-potential-slab-corruption.patch
 	patches.suse/USB-serial-whiteheat-fix-line-speed-endianness.patch
+	patches.suse/0005-mm-thp-handle-page-cache-THP-correctly-in-PageTransC.patch
 	patches.suse/HID-wacom-generic-Treat-serial-number-and-related-fi.patch
 	patches.suse/clk-at91-avoid-sleeping-early.patch
 	patches.suse/clk-sunxi-ng-a80-fix-the-zero-ing-of-bits-16-and-18.patch
