--- a/series.conf
+++ b/series.conf
@@ -25415,6 +25415,7 @@
 	patches.suse/0001-drm-amdkfd-fix-a-use-after-free-race-with-mmu_notife.patch
 	patches.suse/RDMA-Fix-goto-target-to-release-the-allocated-memory.patch
 	patches.suse/RDMA-bnxt_re-Fix-spelling-mistake-missin_resp-missin.patch
+	patches.suse/0004-dm-zoned-fix-invalid-memory-access.patch
 	patches.suse/scsi-qla2xxx-Remove-unnecessary-null-check.patch
 	patches.suse/scsi-qla2xxx-Replace-vmalloc-memset-with-vzalloc.patch
 	patches.suse/scsi-cxlflash-Mark-expected-switch-fall-throughs.patch
