--- a/series.conf
+++ b/series.conf
@@ -25963,6 +25963,7 @@
 	patches.suse/tpm-add-check-after-commands-attribs-tab-allocation.patch
 	patches.suse/blk-mq-avoid-sysfs-buffer-overflow-with-too-many-CPU.patch
 	patches.suse/blk-mq-make-sure-that-line-break-can-be-printed.patch
+	patches.suse/0007-md-raid0-Fix-an-error-message-in-raid0_make_request.patch
 	patches.suse/loop-fix-no-unmap-write-zeroes-request-behavior.patch
 	patches.suse/nbd-prevent-memory-leak.patch
 	patches.suse/mtd-spear_smi-Fix-Write-Burst-mode.patch
