Partially revert "kfifo: fix kfifo_alloc() and kfifo_init()" (git fixes (block drivers)).

--- a/series.conf
+++ b/series.conf
@@ -25083,6 +25083,7 @@
 	patches.suse/0001-drm-i915-Don-t-deballoon-unused-ggtt-drm_mm_node-in-.patch
 	patches.suse/mmc-sdhci-of-at91-add-quirk-for-broken-HS200.patch
 	patches.suse/mmc-core-Fix-init-of-SD-cards-reporting-an-invalid-V.patch
+	patches.suse/0003-Partially-revert-kfifo-fix-kfifo_alloc-and-kfifo_ini.patch
 	patches.suse/crypto-ccp-Ignore-unconfigured-CCP-device-on-suspend.patch
 	patches.suse/KVM-PPC-Book3S-Fix-incorrect-guest-to-user-translati.patch
 	patches.suse/kvm-x86-don-t-update-rip-or-do-single-step-on-faulting-emulation
