--- a/series.conf
+++ b/series.conf
@@ -24160,6 +24160,7 @@
 	patches.suse/powerpc-perf-Fix-MMCRA-corruption-by-bhrb_filter.patch
 	patches.suse/efi-x86-Add-missing-error-handling-to-old_memmap-1-1.patch
 	patches.suse/x86-cpu-amd-don-t-force-the-cpb-cap-when-running-under-a-hypervisor.patch
+	patches.suse/0002-rcu-locking-and-unlocking-need-to-always-be-at-least.patch
 	patches.suse/SUNRPC-fix-regression-in-umount-of-a-secure-mount.patch
 	patches.suse/NFSv4.1-Again-fix-a-race-where-CB_NOTIFY_LOCK-fails-.patch
 	patches.suse/fuse-fallocate-fix-return-with-locked-inode.patch
