hrtimer: Annotate lockless access to timer->state (git fixes (block drivers)).

--- a/series.conf
+++ b/series.conf
@@ -26256,6 +26256,7 @@
 	patches.suse/scsi-qla2xxx-initialize-fc4_type_priority.patch
 	patches.suse/scsi-qla2xxx-don-t-use-zero-for-FC4_PRIORITY_NVME.patch
 	patches.suse/xfs-Sanity-check-flags-of-Q_XQUOTARM-call.patch
+	patches.suse/0009-hrtimer-Annotate-lockless-access-to-timer-state.patch
 	patches.suse/apparmor-fix-unsigned-len-comparison-with-less-than-zero.patch
 	patches.suse/rtc-msm6242-Fix-reading-of-10-hour-digit.patch
 	patches.suse/PCI-PTM-Remove-spurious-d-from-granularity-message.patch
