dm zoned: reduce overhead of backing device checks (git fixes (block drivers)).

--- a/series.conf
+++ b/series.conf
@@ -25966,6 +25966,7 @@
 	patches.suse/0007-md-raid0-Fix-an-error-message-in-raid0_make_request.patch
 	patches.suse/loop-fix-no-unmap-write-zeroes-request-behavior.patch
 	patches.suse/nbd-prevent-memory-leak.patch
+	patches.suse/0008-dm-zoned-reduce-overhead-of-backing-device-checks.patch
 	patches.suse/mtd-spear_smi-Fix-Write-Burst-mode.patch
 	patches.suse/mtd-spi-nor-fix-silent-truncation-in-spi_nor_read.patch
 	patches.suse/btrfs-simplify-inode-locking-for-RWF_NOWAIT.patch
