- block: fix memleak of bio integrity data (git fixes (block   drivers)). - Refresh for the above change,   patches.kabi/block-kABI-fixes-for-bio_rewind_iter-removal.patch.

--- a/series.conf
+++ b/series.conf
@@ -26287,6 +26287,7 @@
 	patches.suse/fix-dget_parent-fastpath-race.patch
 	patches.suse/fsnamei.c-fix-missing-barriers-when-checking-positivity.patch
 	patches.suse/0001-xen-blkback-Avoid-unmapping-unmapped-grant-pages.patch
+	patches.suse/0010-block-fix-memleak-of-bio-integrity-data.patch
 	patches.suse/0002-drm-radeon-fix-r1xx-r2xx-register-checker-for-POT-te.patch
 	patches.suse/ALSA-hda-hdmi-fix-vgaswitcheroo-detection-for-AMD.patch
 	patches.suse/ALSA-hda-hdmi-Add-new-pci-ids-for-AMD-GPU-display-au.patch
