--- a/series.conf
+++ b/series.conf
@@ -26658,6 +26658,7 @@
 	patches.suse/driver-core-Print-device-when-resources-present-in-r.patch
 	patches.suse/driver-core-platform-fix-u32-greater-or-equal-to-zer.patch
 	patches.suse/namei-only-return-ECHILD-from-follow_dotdot_rcu.patch
+	patches.suse/0013-dm-zoned-support-zone-sizes-smaller-than-128MiB.patch
 	patches.suse/scsi-qla2xxx-Remove-defer-flag-to-indicate-immeadiat.patch
 	patches.suse/scsi-qla2xxx-Fix-fabric-scan-hang.patch
 	patches.suse/scsi-qla2xxx-Add-a-shadow-variable-to-hold-disc_stat.patch
