--- a/series.conf
+++ b/series.conf
@@ -26567,6 +26567,7 @@
 	patches.suse/livepatch-samples-selftest-use-klp_shadow_alloc-api-correctly.patch
 	patches.suse/regulator-rk808-Lower-log-level-on-optional-GPIOs-be.patch
 	patches.suse/ACPI-video-Do-not-export-a-non-working-backlight-int.patch
+	patches.suse/0012-bcache-avoid-unnecessary-btree-nodes-flushing-in-btr.patch
 	patches.suse/clocksource-drivers-bcm2835_timer-Fix-memory-leak-of.patch
 	patches.suse/irqdomain-Fix-a-memory-leak-in-irq_domain_push_irq.patch
 	patches.suse/x86-cpu-update-cached-hle-state-on-write-to-tsx_ctrl_cpuid_clear
