--- a/series.conf
+++ b/series.conf
@@ -26344,6 +26344,7 @@
 	patches.suse/xhci-make-sure-interrupts-are-restored-to-correct-st.patch
 	patches.suse/iio-adc-max9611-Fix-too-short-conversion-time-delay.patch
 	patches.suse/staging-rtl8188eu-fix-interface-sanity-check.patch
+	patches.suse/0011-lib-raid6-fix-awk-build-warnings.patch
 	patches.suse/scsi-qla2xxx-Correctly-retrieve-and-interpret-active.patch
 	patches.suse/scsi-qla2xxx-Added-support-for-MPI-and-PEP-regions-f.patch
 	patches.suse/scsi-qla2xxx-Fix-incorrect-SFUB-length-used-for-Secu.patch
