--- a/series.conf
+++ b/series.conf
@@ -26854,6 +26854,7 @@
 	patches.suse/cifs-Fix-mode-output-in-debugging-statements.patch
 	patches.suse/cifs-enable-change-notification-for-SMB2-1-dialect.patch
 	patches.suse/cifs-make-sure-we-do-not-overflow-the-max-EA-buffer-size.patch
+	patches.suse/0015-bcache-Revert-bcache-shrink-btree-node-cache-after-b.patch
 	patches.suse/nvme-fix-the-parameter-order-for-nvme_get_log-in-nvm.patch
 	patches.suse/edac-mc-fix-use-after-free-and-memleaks-during-device-removal.patch
 	patches.suse/ipmi-ssif-Handle-a-possible-NULL-pointer-reference.patch
