dm writecache: verify watermark during resume (git fixes (block drivers)).

--- a/series.conf
+++ b/series.conf
@@ -26940,6 +26940,7 @@
 	patches.suse/cifs-add-missing-mount-option-to-proc-mounts.patch
 	patches.suse/cifs-fix-rename-by-ensuring-source-handle-opened-wit.patch
 	patches.suse/cifs-Use-define-in-cifs_dbg.patch
+	patches.suse/0017-dm-writecache-verify-watermark-during-resume.patch
 	patches.suse/dmaengine-coh901318-Fix-a-double-lock-bug-in-dma_tc_.patch
 	patches.suse/0001-drm-i915-selftests-Fix-return-in-assert_mmap_offset.patch
 	patches.suse/fat-fix-uninit-memory-access-for-partial-initialized.patch
