lib/stackdepot.c: fix global out-of-bounds in stack_slabs (git fixes (block drivers)).

--- a/series.conf
+++ b/series.conf
@@ -26863,6 +26863,7 @@
 	patches.suse/ALSA-hda-Use-scnprintf-for-printing-texts-for-sysfs-.patch
 	patches.suse/ASoC-sun8i-codec-Fix-setting-DAI-data-format.patch
 	patches.suse/iommu-vt-d-fix-compile-warning-from-intel-svm-h
+	patches.suse/0016-lib-stackdepot.c-fix-global-out-of-bounds-in-stack_s.patch
 	patches.suse/ipv6-Fix-route-replacement-with-dev-only-route.patch
 	patches.suse/ipv6-Fix-nlmsg_flags-when-splitting-a-multipath-rout.patch
 	patches.suse/net-fib_rules-Correctly-set-table-field-when-table-n.patch
