--- a/series.conf
+++ b/series.conf
@@ -27172,6 +27172,7 @@
 	patches.suse/scsi-qla2xxx-Remove-non-functional-code.patch
 	patches.suse/x86-xen-make-the-boot-cpu-idle-task-reliable.patch
 	patches.suse/x86-xen-make-the-secondary-cpu-idle-tasks-reliable.patch
+	patches.suse/0019-coresight-do-not-use-the-BIT-macro-in-the-UAPI-heade.patch
 	patches.suse/PCI-ASPM-Clear-the-correct-bits-when-enabling-L1-sub.patch
 	patches.suse/pci-pciehp-fix-msi-interrupt-race
 	patches.suse/PCI-endpoint-Fix-clearing-start-entry-in-configfs.patch
