--- a/series.conf
+++ b/series.conf
@@ -27223,6 +27223,7 @@
 	patches.suse/pwm-pca9685-Fix-PWM-GPIO-inter-operation.patch
 	patches.suse/0001-xen-blkfront-fix-memory-allocation-flags-in-blkfront.patch
 	patches.suse/x86-xen-fix-booting-32-bit-pv-guest.patch
+	patches.suse/0020-lib-raid6-test-fix-build-on-distros-whose-bin-sh-is-.patch
 	patches.suse/cifs-ignore-cached-share-root-handle-closing-errors.patch
 	patches.suse/tracing-fix-the-race-between-registering-snapshot-event-trigger-and-triggering-snapshot-operation.patch
 	patches.suse/mac80211_hwsim-Use-kstrndup-in-place-of-kasprintf.patch
