--- a/series.conf
+++ b/series.conf
@@ -27254,6 +27254,7 @@
 	patches.suse/usb-gadget-udc-bdc-Remove-unnecessary-NULL-checks-in.patch
 	patches.suse/usb-dwc3-gadget-Do-link-recovery-for-SS-and-SSP.patch
 	patches.suse/USB-hub-Fix-handling-of-connect-changes-during-sleep.patch
+	patches.suse/0021-dm-writecache-fix-data-corruption-when-reloading-the.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-set-UNLOADING-before-waiting-for-sessio.patch
