bcache: fix incorrect data type usage in btree_flush_write() (git fixes (block drivers)).

--- a/series.conf
+++ b/series.conf
@@ -26787,6 +26787,7 @@
 	patches.suse/pwm-omap-dmtimer-Remove-PWM-chip-in-.remove-before-m.patch
 	patches.suse/pwm-Remove-set-but-not-set-variable-pwm.patch
 	patches.suse/ata-ahci-Add-shutdown-to-freeze-hardware-resources-o.patch
+	patches.suse/0022-bcache-fix-incorrect-data-type-usage-in-btree_flush_.patch
 	patches.suse/tracing-fix-very-unlikely-race-of-registering-two-stat-tracers.patch
 	patches.suse/tracing-fix-tracing_stat-return-values-in-error-handling-paths.patch
 	patches.suse/tracing-annotate-ftrace_graph_hash-pointer-with-_rcu.patch
