xfs: clear PF_MEMALLOC before exiting xfsaild thread (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -53163,6 +53163,7 @@
 	patches.suse/0001-Revert-drm-panel-simple-Add-support-for-Sharp-LQ150X.patch
 	patches.suse/0001-drm-i915-properly-sanity-check-batch_start_offset.patch
 	patches.suse/0001-drm-amd-acp-fix-broken-menu-structure.patch
+	patches.suse/xfs-clear-PF_MEMALLOC-before-exiting-xfsaild-thread.patch
 	patches.suse/s390-gmap-return-proper-error-code-on-ksm-unsharing
 	patches.suse/ALSA-hda-ca0132-Add-Recon3Di-quirk-to-handle-integra.patch
 	patches.suse/ALSA-hda-realtek-Enable-mute-LED-on-an-HP-system.patch
