--- a/series.conf
+++ b/series.conf
@@ -23860,6 +23860,7 @@
 	patches.suse/RDMA-rxe-Consider-skb-reserve-space-based-on-netdev-.patch
 	patches.suse/ipoib-Do-not-overreact-to-SM-LID-change-even.patch
 	patches.suse/NFS-Don-t-interrupt-file-writeout-due-to-fatal-error.patch
+	patches.suse/NFS-Don-t-call-generic_error_remove_page-while-holdi.patch
 	patches.suse/NFS-make-nfs_match_client-killable.patch
 	patches.suse/PNFS-fallback-to-MDS-if-no-deviceid-found.patch
 	patches.suse/NFS4-Fix-v4.0-client-state-corruption-when-mount.patch
