USB: Add USB_QUIRK_DELAY_CTRL_MSG and USB_QUIRK_DELAY_INIT for Corsair K70 RGB RAPIDFIRE (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -27264,6 +27264,7 @@
 	patches.suse/USB-core-Fix-free-while-in-use-bug-in-the-USB-S-Glib.patch
 	patches.suse/USB-early-Handle-AMD-s-spec-compliant-identifiers-to.patch
 	patches.suse/usb-f_fs-Clear-OS-Extended-descriptor-counts-to-zero.patch
+	patches.suse/USB-Add-USB_QUIRK_DELAY_CTRL_MSG-and-USB_QUIRK_DELAY.patch
 	patches.suse/usb-gadget-udc-bdc-Remove-unnecessary-NULL-checks-in.patch
 	patches.suse/usb-dwc3-gadget-Do-link-recovery-for-SS-and-SSP.patch
 	patches.suse/USB-hub-Fix-handling-of-connect-changes-during-sleep.patch
