--- a/series.conf
+++ b/series.conf
@@ -27267,6 +27267,7 @@
 	patches.suse/USB-Add-USB_QUIRK_DELAY_CTRL_MSG-and-USB_QUIRK_DELAY.patch
 	patches.suse/usb-gadget-udc-bdc-Remove-unnecessary-NULL-checks-in.patch
 	patches.suse/usb-dwc3-gadget-Do-link-recovery-for-SS-and-SSP.patch
+	patches.suse/usb-gadget-udc-atmel-Fix-vbus-disconnect-handling.patch
 	patches.suse/USB-hub-Fix-handling-of-connect-changes-during-sleep.patch
 	patches.suse/mmc-sdhci-xenon-fix-annoying-1.8V-regulator-warning.patch
 	patches.suse/mmc-sdhci-pci-Fix-eMMC-driver-strength-for-BYT-based.patch
