blacklist.conf: would break kABI

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1531,3 +1531,4 @@ f9bf8adb55cd5a357b247a16aafddf8c97b276e0 # not a regression - Fixes tag is wrong
 86d32f9a7c54ad74f4514d7fef7c847883207291 # not a regression - Fixes tag is wrong
 0df9433fcae02215c8fd79690c134d535c7bb905 # we do not have a virtual bus for altmodes, only type C, misatttributed
 32dcfe8316cdbd885542967c0c85f5b9de78874b # kABI
+2df7405f79ce1674d73c2786fe1a8727c905d65b # kABI
