--- a/series.conf
+++ b/series.conf
@@ -27263,6 +27263,7 @@
 	patches.suse/staging-comedi-Fix-comedi_device-refcnt-leak-in-come.patch
 	patches.suse/USB-core-Fix-free-while-in-use-bug-in-the-USB-S-Glib.patch
 	patches.suse/USB-early-Handle-AMD-s-spec-compliant-identifiers-to.patch
+	patches.suse/UAS-no-use-logging-any-details-in-case-of-ENODEV.patch
 	patches.suse/usb-f_fs-Clear-OS-Extended-descriptor-counts-to-zero.patch
 	patches.suse/USB-Add-USB_QUIRK_DELAY_CTRL_MSG-and-USB_QUIRK_DELAY.patch
 	patches.suse/usb-gadget-udc-bdc-Remove-unnecessary-NULL-checks-in.patch
