--- a/series.conf
+++ b/series.conf
@@ -27208,6 +27208,7 @@
 	patches.suse/thermal-devfreq_cooling-inline-all-stubs-for-CONFIG_.patch
 	patches.suse/Input-i8042-add-Acer-Aspire-5738z-to-nomux-list.patch
 	patches.suse/kvm-s390-vsie-fix-region-1-asce-sanity-shadow-address-checks
+	patches.suse/kvm-s390-vsie-fix-delivery-of-addressing-exceptions
 	patches.suse/kvm-s390-vsie-fix-possible-race-when-shadowing-region-3-tables
 	patches.suse/iommu-amd-fix-the-configuration-of-gcr3-table-root-pointer
 	patches.suse/s390-cio-avoid-duplicated-add-uevents
