--- a/series.conf
+++ b/series.conf
@@ -27268,6 +27268,7 @@
 	patches.suse/mmc-sdhci-xenon-fix-annoying-1.8V-regulator-warning.patch
 	patches.suse/mmc-sdhci-pci-Fix-eMMC-driver-strength-for-BYT-based.patch
 	patches.suse/0021-dm-writecache-fix-data-corruption-when-reloading-the.patch
+	patches.suse/drm-qxl-qxl_release-leak-in-qxl_draw_dirty_fb.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-set-UNLOADING-before-waiting-for-sessio.patch
