mmc: sdhci-xenon: fix annoying 1.8V regulator warning (bsc#1051510).

--- a/series.conf
+++ b/series.conf
@@ -27265,6 +27265,7 @@
 	patches.suse/usb-gadget-udc-bdc-Remove-unnecessary-NULL-checks-in.patch
 	patches.suse/usb-dwc3-gadget-Do-link-recovery-for-SS-and-SSP.patch
 	patches.suse/USB-hub-Fix-handling-of-connect-changes-during-sleep.patch
+	patches.suse/mmc-sdhci-xenon-fix-annoying-1.8V-regulator-warning.patch
 	patches.suse/0021-dm-writecache-fix-data-corruption-when-reloading-the.patch
 
 	# jejb/scsi for-next
