drm/qxl: qxl_release leak in qxl_hw_surface_alloc() (bsc#1051510).

--- a/series.conf
+++ b/series.conf
@@ -27269,6 +27269,7 @@
 	patches.suse/mmc-sdhci-pci-Fix-eMMC-driver-strength-for-BYT-based.patch
 	patches.suse/0021-dm-writecache-fix-data-corruption-when-reloading-the.patch
 	patches.suse/drm-qxl-qxl_release-leak-in-qxl_draw_dirty_fb.patch
+	patches.suse/drm-qxl-qxl_release-leak-in-qxl_hw_surface_alloc.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-set-UNLOADING-before-waiting-for-sessio.patch
