mtd: cfi: fix deadloop in cfi_cmdset_0002.c do_write_buffer (bsc#1051510).

--- a/series.conf
+++ b/series.conf
@@ -23243,6 +23243,7 @@
 	patches.suse/scsi-qedi-remove-declaration-of-nvm_image-from-stack
 	patches.suse/scsi-core-add-new-RDAC-LENOVO-DE_Series-device.patch
 	patches.suse/msft-hv-1866-scsi-storvsc-Reduce-default-ring-buffer-size-to-128-.patch
+	patches.suse/mtd-cfi-fix-deadloop-in-cfi_cmdset_0002.c-do_write_b.patch
 	patches.suse/0001-xen-Prevent-buffer-overflow-in-privcmd-ioctl.patch
 	patches.suse/ARM-orion-don-t-use-using-64-bit-DMA-masks.patch
 	patches.suse/ARM-iop-don-t-use-using-64-bit-DMA-masks.patch
