drm/qxl: qxl_release use after free (bsc#1051510).

--- a/series.conf
+++ b/series.conf
@@ -27270,6 +27270,7 @@
 	patches.suse/0021-dm-writecache-fix-data-corruption-when-reloading-the.patch
 	patches.suse/drm-qxl-qxl_release-leak-in-qxl_draw_dirty_fb.patch
 	patches.suse/drm-qxl-qxl_release-leak-in-qxl_hw_surface_alloc.patch
+	patches.suse/drm-qxl-qxl_release-use-after-free.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-set-UNLOADING-before-waiting-for-sessio.patch
