--- a/series.conf
+++ b/series.conf
@@ -27266,6 +27266,7 @@
 	patches.suse/usb-dwc3-gadget-Do-link-recovery-for-SS-and-SSP.patch
 	patches.suse/USB-hub-Fix-handling-of-connect-changes-during-sleep.patch
 	patches.suse/mmc-sdhci-xenon-fix-annoying-1.8V-regulator-warning.patch
+	patches.suse/mmc-sdhci-pci-Fix-eMMC-driver-strength-for-BYT-based.patch
 	patches.suse/0021-dm-writecache-fix-data-corruption-when-reloading-the.patch
 
 	# jejb/scsi for-next
