ALSA: hda/hdmi: fix without unlocked before return (bsc#1051510).

--- a/series.conf
+++ b/series.conf
@@ -27273,6 +27273,7 @@
 	patches.suse/drm-qxl-qxl_release-use-after-free.patch
 	patches.suse/ALSA-hda-realtek-Two-front-mics-on-a-Lenovo-ThinkCen.patch
 	patches.suse/ALSA-hda-hdmi-fix-race-in-monitor-detection-during-p.patch
+	patches.suse/ALSA-hda-hdmi-fix-without-unlocked-before-return.patch
 	patches.suse/dmaengine-dmatest-Fix-iteration-non-stop-logic.patch
 
 	# jejb/scsi for-next
