--- a/series.conf
+++ b/series.conf
@@ -27274,6 +27274,7 @@
 	patches.suse/ALSA-hda-realtek-Two-front-mics-on-a-Lenovo-ThinkCen.patch
 	patches.suse/ALSA-hda-hdmi-fix-race-in-monitor-detection-during-p.patch
 	patches.suse/ALSA-hda-hdmi-fix-without-unlocked-before-return.patch
+	patches.suse/ALSA-opti9xx-shut-up-gcc-10-range-warning.patch
 	patches.suse/dmaengine-dmatest-Fix-iteration-non-stop-logic.patch
 
 	# jejb/scsi for-next
