ALSA: usb-audio: Correct a typo of NuPrime DAC-10 USB ID (bsc#1051510).

--- a/series.conf
+++ b/series.conf
@@ -27275,6 +27275,7 @@
 	patches.suse/ALSA-hda-hdmi-fix-race-in-monitor-detection-during-p.patch
 	patches.suse/ALSA-hda-hdmi-fix-without-unlocked-before-return.patch
 	patches.suse/ALSA-opti9xx-shut-up-gcc-10-range-warning.patch
+	patches.suse/ALSA-usb-audio-Correct-a-typo-of-NuPrime-DAC-10-USB-.patch
 	patches.suse/dmaengine-dmatest-Fix-iteration-non-stop-logic.patch
 
 	# jejb/scsi for-next
