--- a/series.conf
+++ b/series.conf
@@ -27272,6 +27272,7 @@
 	patches.suse/drm-qxl-qxl_release-leak-in-qxl_hw_surface_alloc.patch
 	patches.suse/drm-qxl-qxl_release-use-after-free.patch
 	patches.suse/ALSA-hda-realtek-Two-front-mics-on-a-Lenovo-ThinkCen.patch
+	patches.suse/ALSA-hda-hdmi-fix-race-in-monitor-detection-during-p.patch
 	patches.suse/dmaengine-dmatest-Fix-iteration-non-stop-logic.patch
 
 	# jejb/scsi for-next
