--- a/series.conf
+++ b/series.conf
@@ -27271,6 +27271,7 @@
 	patches.suse/drm-qxl-qxl_release-leak-in-qxl_draw_dirty_fb.patch
 	patches.suse/drm-qxl-qxl_release-leak-in-qxl_hw_surface_alloc.patch
 	patches.suse/drm-qxl-qxl_release-use-after-free.patch
+	patches.suse/ALSA-hda-realtek-Two-front-mics-on-a-Lenovo-ThinkCen.patch
 	patches.suse/dmaengine-dmatest-Fix-iteration-non-stop-logic.patch
 
 	# jejb/scsi for-next
