ALSA: hda: Match both PCI ID and SSID for driver blacklist (bsc#1111666).

--- a/series.conf
+++ b/series.conf
@@ -53428,6 +53428,7 @@
 	patches.suse/usb-dwc3-gadget-Do-link-recovery-for-SS-and-SSP.patch
 	patches.suse/USB-hub-Fix-handling-of-connect-changes-during-sleep.patch
 	patches.suse/0021-dm-writecache-fix-data-corruption-when-reloading-the.patch
+	patches.suse/ALSA-hda-Match-both-PCI-ID-and-SSID-for-driver-black.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-set-UNLOADING-before-waiting-for-sessio.patch
