--- a/series.conf
+++ b/series.conf
@@ -27266,6 +27266,7 @@
 	patches.suse/UAS-no-use-logging-any-details-in-case-of-ENODEV.patch
 	patches.suse/UAS-fix-deadlock-in-error-handling-and-PM-flushing-w.patch
 	patches.suse/cdc-acm-close-race-betrween-suspend-and-acm_softint.patch
+	patches.suse/cdc-acm-introduce-a-cool-down.patch
 	patches.suse/usb-f_fs-Clear-OS-Extended-descriptor-counts-to-zero.patch
 	patches.suse/USB-Add-USB_QUIRK_DELAY_CTRL_MSG-and-USB_QUIRK_DELAY.patch
 	patches.suse/usb-gadget-udc-bdc-Remove-unnecessary-NULL-checks-in.patch
