--- a/series.conf
+++ b/series.conf
@@ -20789,6 +20789,7 @@
 	patches.suse/0001-mach64-fix-image-corruption-due-to-reading-accelerat.patch
 	patches.suse/fbdev-sbuslib-use-checked-version-of-put_user.patch
 	patches.suse/fbdev-sbuslib-integer-overflow-in-sbusfb_ioctl_helpe.patch
+	patches.suse/0001-video-fbdev-sis-Remove-unnecessary-parentheses-and-c.patch
 	patches.suse/0001-fbdev-fix-broken-menu-dependencies.patch
 	patches.suse/revert-ceph-fix-dentry-leak-in-splice_dentry.patch
 	patches.suse/ceph-fix-dentry-leak-in-ceph_readdir_prepopulate.patch
