--- a/series.conf
+++ b/series.conf
@@ -27209,6 +27209,7 @@
 	patches.suse/mfd-dln2-Fix-sanity-checking-for-endpoints.patch
 	patches.suse/thermal-devfreq_cooling-inline-all-stubs-for-CONFIG_.patch
 	patches.suse/Input-i8042-add-Acer-Aspire-5738z-to-nomux-list.patch
+	patches.suse/0002-fbcon-fix-null-ptr-deref-in-fbcon_switch.patch
 	patches.suse/kvm-s390-vsie-fix-region-1-asce-sanity-shadow-address-checks
 	patches.suse/kvm-s390-vsie-fix-delivery-of-addressing-exceptions
 	patches.suse/kvm-s390-vsie-fix-possible-race-when-shadowing-region-3-tables
