ibmvnic: Skip fatal error reset after passive init (bsc#1171078 ltc#184239).

--- a/series.conf
+++ b/series.conf
@@ -27278,6 +27278,9 @@
 	patches.suse/ALSA-usb-audio-Correct-a-typo-of-NuPrime-DAC-10-USB-.patch
 	patches.suse/dmaengine-dmatest-Fix-iteration-non-stop-logic.patch
 
+	# netdev/net
+	patches.suse/ibmvnic-Skip-fatal-error-reset-after-passive-init.patch
+
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-set-UNLOADING-before-waiting-for-sessio.patch
 	patches.suse/scsi-qla2xxx-check-UNLOADING-before-posting-async-wo.patch
