xfs: Correctly invert xfs_buftarg LRU isolation logic (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -15227,6 +15227,7 @@
 	patches.suse/0005-ipc-shm-Fix-pid-freeing.patch
 	patches.suse/xfs-Remove-dead-code-from-inode-recover-function.patch
 	patches.suse/xfs-fix-transaction-allocation-deadlock-in-IO-path.patch
+	patches.suse/xfs-Correctly-invert-xfs_buftarg-LRU-isolation-logic.patch
 	patches.suse/xfs-convert-XFS_AGFL_SIZE-to-a-helper-function.patch
 	patches.suse/xfs-don-t-use-XFS_BMAPI_ENTRIRE-in-xfs_get_blocks.patch
 	patches.suse/xfs-remove-xfs_zero_range.patch
