xfs: don't ever return a stale pointer from __xfs_dir3_free_read (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -27106,6 +27106,7 @@
 	patches.suse/0001-drm-i915-properly-sanity-check-batch_start_offset.patch
 	patches.suse/0001-drm-amd-acp-fix-broken-menu-structure.patch
 	patches.suse/0018-dm-zoned-remove-duplicate-nr_rnd_zones-increase-in-d.patch
+	patches.suse/xfs-don-t-ever-return-a-stale-pointer-from-__xfs_dir.patch
 	patches.suse/s390-gmap-return-proper-error-code-on-ksm-unsharing
 	patches.suse/ALSA-via82xx-Fix-endianness-annotations.patch
 	patches.suse/ALSA-emu10k1-Fix-endianness-annotations.patch
