blacklist.conf: add 5a57c05b56b6e

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1530,3 +1530,4 @@ d7a47b96ed1102551eb7325f97937e276fb91045 # not a regression - Fixes tag is wrong
 f9bf8adb55cd5a357b247a16aafddf8c97b276e0 # not a regression - Fixes tag is wrong
 86d32f9a7c54ad74f4514d7fef7c847883207291 # not a regression - Fixes tag is wrong
 71912e08e06b7041ba3b40945328b84798dfe6fc # gcc warning fix on comment description
+5a57c05b56b6eb2b4e3eb2a9f205e39e849325a1 # sparse warning fix
