--- a/series.conf
+++ b/series.conf
@@ -27265,6 +27265,7 @@
 	patches.suse/iio-xilinx-xadc-Fix-clearing-interrupt-when-enabling.patch
 	patches.suse/iio-xilinx-xadc-Fix-sequencer-configuration-for-aux-.patch
 	patches.suse/staging-comedi-Fix-comedi_device-refcnt-leak-in-come.patch
+	patches.suse/tty-rocket-avoid-OOB-access.patch
 	patches.suse/USB-core-Fix-free-while-in-use-bug-in-the-USB-S-Glib.patch
 	patches.suse/USB-early-Handle-AMD-s-spec-compliant-identifiers-to.patch
 	patches.suse/usb-f_fs-Clear-OS-Extended-descriptor-counts-to-zero.patch
