--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1454,3 +1454,4 @@ dc39c1d68f256990d4bb0033a219e8ca15ba4d7f # ppc sstep emu
 278e2148c07559dd4ad8602f22366d61eb2ee7b7 # bridge: reverting the above
 55576cf1853798e86f620766e23b604c9224c19c # regulator: cause a regression, reverted in below
 350a0cba90e1bd40b1fe5b396923d2f3a61d1056 # regulator: reverting the above in 4.14.y stable
+d61acbbf54c612ea9bf67eed609494cda0857b3a # Needs extra dependency, while current out-of-tree solution is good enough
