HID: wacom: Read HID_DG_CONTACTMAX directly for non-generic devices (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -27277,6 +27277,7 @@
 	patches.suse/ALSA-opti9xx-shut-up-gcc-10-range-warning.patch
 	patches.suse/ALSA-usb-audio-Correct-a-typo-of-NuPrime-DAC-10-USB-.patch
 	patches.suse/dmaengine-dmatest-Fix-iteration-non-stop-logic.patch
+	patches.suse/HID-wacom-Read-HID_DG_CONTACTMAX-directly-for-non-ge.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-set-UNLOADING-before-waiting-for-sessio.patch
