blacklist.conf: Require extra dependency while out-of-tree  fix is already good enough (bsc#1168670)

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1529,3 +1529,4 @@ ee84f19cbbe9cf7cba2958acb03163fed3ecbb0f # not a regression - Fixes tag is wrong
 d7a47b96ed1102551eb7325f97937e276fb91045 # not a regression - Fixes tag is wrong
 f9bf8adb55cd5a357b247a16aafddf8c97b276e0 # not a regression - Fixes tag is wrong
 86d32f9a7c54ad74f4514d7fef7c847883207291 # not a regression - Fixes tag is wrong
+d61acbbf54c612ea9bf67eed609494cda0857b3a # Needs extra dependency, while current out-of-tree solution is good enough
