--- a/series.conf
+++ b/series.conf
@@ -27039,6 +27039,7 @@
 	patches.suse/hsr-use-rcu_read_lock-in-hsr_get_node_-list-status.patch
 	patches.suse/hsr-add-restart-routine-into-hsr_get_node_list.patch
 	patches.suse/hsr-set-.netnsok-flag.patch
+	patches.suse/net_sched-cls_route-remove-the-right-filter-from-has.patch
 	patches.suse/NFC-fdp-Fix-a-signedness-bug-in-fdp_nci_send_patch.patch
 	patches.suse/net-ena-add-pci-shutdown-handler-to-allow-safe-kexec.patch
 	patches.suse/Input-raydium_i2c_ts-fix-error-codes-in-raydium_i2c_.patch
