net: dsa: Fix duplicate frames flooded by learning (networking-stable-20_03_28).

--- a/series.conf
+++ b/series.conf
@@ -27049,6 +27049,7 @@
 	patches.suse/net-qmi_wwan-add-support-for-ASKEY-WWHC050.patch
 	patches.suse/macsec-restrict-to-ethernet-devices.patch
 	patches.suse/bnxt_en-fix-memory-leaks-in-bnxt_dcbnl_ieee_getets.patch
+	patches.suse/net-dsa-Fix-duplicate-frames-flooded-by-learning.patch
 	patches.suse/net-ena-add-pci-shutdown-handler-to-allow-safe-kexec.patch
 	patches.suse/Input-raydium_i2c_ts-fix-error-codes-in-raydium_i2c_.patch
 	patches.suse/Input-synaptics-enable-RMI-on-HP-Envy-13-ad105ng.patch
