drm: NULL pointer dereference [null-pointer-deref] (CWE 476) problem (bsc#1114279)

--- a/series.conf
+++ b/series.conf
@@ -14854,6 +14854,7 @@
 	patches.suse/drm-i915-Remove-unbannable-context-spam-from-reset
 	patches.suse/drm-i915-cnl-WaPipeControlBefore3DStateSamplePattern
 	patches.suse/drm-rockchip-Respect-page-offset-for-PRIME-mmap-call
+	patches.suse/0001-drm-NULL-pointer-dereference-null-pointer-deref-CWE-.patch
 	patches.suse/0001-video-backlight-Add-of_find_backlight-helper-in-back.patch
 	patches.suse/0002-video-backlight-Add-devres-versions-of-of_find_backl.patch
 	patches.suse/drm-i915-Correctly-handle-limited-range-YCbCr-data-o
