dp83640: reverse arguments to list_add_tail (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -27284,6 +27284,7 @@
 	patches.suse/batman-adv-Fix-refcnt-leak-in-batadv_show_throughput.patch
 	patches.suse/batman-adv-Fix-refcnt-leak-in-batadv_store_throughpu.patch
 	patches.suse/batman-adv-Fix-refcnt-leak-in-batadv_v_ogm_process.patch
+	patches.suse/dp83640-reverse-arguments-to-list_add_tail.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-set-UNLOADING-before-waiting-for-sessio.patch
