batman-adv: fix batadv_nc_random_weight_tq (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -27280,6 +27280,7 @@
 	patches.suse/ALSA-usb-audio-Correct-a-typo-of-NuPrime-DAC-10-USB-.patch
 	patches.suse/dmaengine-dmatest-Fix-iteration-non-stop-logic.patch
 	patches.suse/HID-wacom-Read-HID_DG_CONTACTMAX-directly-for-non-ge.patch
+	patches.suse/batman-adv-fix-batadv_nc_random_weight_tq.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-set-UNLOADING-before-waiting-for-sessio.patch
