batman-adv: Fix refcnt leak in batadv_store_throughput_override (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -27282,6 +27282,7 @@
 	patches.suse/HID-wacom-Read-HID_DG_CONTACTMAX-directly-for-non-ge.patch
 	patches.suse/batman-adv-fix-batadv_nc_random_weight_tq.patch
 	patches.suse/batman-adv-Fix-refcnt-leak-in-batadv_show_throughput.patch
+	patches.suse/batman-adv-Fix-refcnt-leak-in-batadv_store_throughpu.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-set-UNLOADING-before-waiting-for-sessio.patch
