drm/i915: Apply Wa_1406680159:icl,ehl as an engine workaround (bsc#1112178)
	* rename gt/intel_workarounds.c to intel_workarounds.c
	* context changes

--- a/series.conf
+++ b/series.conf
@@ -53199,6 +53199,7 @@
 	patches.suse/drm-v3d-Replace-wait_for-macros-to-remove-use-of-msl.patch
 	patches.suse/0001-Revert-drm-panel-simple-Add-support-for-Sharp-LQ150X.patch
 	patches.suse/0001-drm-i915-properly-sanity-check-batch_start_offset.patch
+	patches.suse/0005-drm-i915-Apply-Wa_1406680159-icl-ehl-as-an-engine-wo.patch
 	patches.suse/0001-drm-amd-acp-fix-broken-menu-structure.patch
 	patches.suse/0018-dm-zoned-remove-duplicate-nr_rnd_zones-increase-in-d.patch
 	patches.suse/xfs-clear-PF_MEMALLOC-before-exiting-xfsaild-thread.patch
