drm/etnaviv: rework perfmon query infrastructure (bsc#1112178)

--- a/series.conf
+++ b/series.conf
@@ -53201,6 +53201,7 @@
 	patches.suse/0001-drm-i915-properly-sanity-check-batch_start_offset.patch
 	patches.suse/0005-drm-i915-Apply-Wa_1406680159-icl-ehl-as-an-engine-wo.patch
 	patches.suse/0001-drm-amd-acp-fix-broken-menu-structure.patch
+	patches.suse/0006-drm-etnaviv-rework-perfmon-query-infrastructure.patch
 	patches.suse/0018-dm-zoned-remove-duplicate-nr_rnd_zones-increase-in-d.patch
 	patches.suse/xfs-clear-PF_MEMALLOC-before-exiting-xfsaild-thread.patch
 	patches.suse/s390-gmap-return-proper-error-code-on-ksm-unsharing
