drm/i915: HDCP: fix Ri prime check done during link check (bsc#1112178)
	* rename display/intel_hdmi.c to intel_hdmi.c
	* context changes

--- a/series.conf
+++ b/series.conf
@@ -53407,6 +53407,7 @@
 	patches.suse/objtool-fix-switch-table-detection-in-text-unlikely.patch
 	patches.suse/objtool-make-bp-scratch-register-warning-more-robust.patch
 	patches.suse/x86-resctrl-Fix-invalid-attempt-at-removing-the-defa.patch
+	patches.suse/0007-drm-i915-HDCP-fix-Ri-prime-check-done-during-link-ch.patch
 	patches.suse/drm-meson-Delete-an-error-message-in-meson_dw_hdmi_b.patch
 	patches.suse/ALSA-hda-realtek-Fix-unexpected-init_amp-override.patch
 	patches.suse/ALSA-hda-Remove-ASUS-ROG-Zenith-from-the-blacklist.patch
