w1: use put_device() if device_register() fail (jsc#SLE-11048).

--- a/series.conf
+++ b/series.conf
@@ -28438,6 +28438,7 @@
 	patches.suse/msft-hv-1619-hv_balloon-fix-bugs-in-num_pages_onlined-accounting.patch
 	patches.suse/msft-hv-1620-hv_balloon-trace-post_status.patch
 	patches.suse/msft-hv-1621-uio_hv_generic-support-sub-channels.patch
+	patches.suse/w1-use-put_device-if-device_register-fail.patch
 	patches.suse/parport_pc-Add-support-for-WCH-CH382L-PCI-E-single-p
 	patches.suse/mei-remove-dev_err-message-on-an-unsupported-ioctl
 	patches.suse/char_dev-Fix-off-by-one-bugs-in-find_dynamic_major.patch
