w1: keep balance of mutex locks and refcnts (jsc#SLE-11048).

--- a/series.conf
+++ b/series.conf
@@ -16252,6 +16252,7 @@
 	patches.suse/nvmem-imx-ocotp-Add-i.MX7D-timing-write-clock-setup-.patch
 	patches.suse/nvmem-imx-ocotp-Enable-i.MX7D-OTP-write-support.patch
 	patches.suse/nvmem-imx-ocotp-Update-module-description.patch
+	patches.suse/w1-keep-balance-of-mutex-locks-and-refcnts.patch
 	patches.suse/mfd-Add-support-for-Cherry-Trail-Dollar-Cove-TI-PMIC
 	patches.suse/ACPI-PMIC-Add-opregion-driver-for-Intel-Dollar-Cove-
 	patches.suse/mfd-rts5249-add-support-for-rts5250s-power-saving.patch
