w1: Fix slave count on 1-Wire bus (resend) (jsc#SLE-11048).

--- a/series.conf
+++ b/series.conf
@@ -5851,6 +5851,7 @@
 	patches.suse/include-usb-audio-specify-exact-endiannes-of-descrip.patch
 	patches.suse/0027-thunderbolt-Correct-access-permissions-for-active-NV.patch
 	patches.suse/fsi-core-register-with-postcore_initcall
+	patches.suse/w1-fix-slave-count-on-1-wire-bus-resend.patch
 	patches.suse/0072-tty-serial-lpuart-Fix-the-logic-for-detecting-the-32.patch
 	patches.suse/xen-grant-table-log-the-lack-of-grants.patch
 	patches.suse/xen-balloon-don-t-online-new-memory-initially.patch
