w1: Add subsystem kernel public interface (jsc#SLE-11048).

--- a/series.conf
+++ b/series.conf
@@ -1496,6 +1496,7 @@
 	patches.suse/0001-thunderbolt-Add-documentation-how-Thunderbolt-bus-ca.patch
 	patches.suse/0026-thunderbolt-fix-spelling-mistake-missmatch-mismatch.patch
 	patches.suse/drivers-fsi-Add-module-license-to-core-driver.patch
+	patches.suse/w1-add-subsystem-kernel-public-interface.patch
 	patches.suse/nvmem-correct-Broadcom-OTP-controller-driver-writes.patch
 	patches.suse/0003-doc-ReSTify-apparmor.txt.patch
 	patches.suse/net-skbuff.h-properly-escape-a-macro-name-on-kernel-.patch
